--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/searchWordTextInput"
-        android:layout_width="216dp"
-        android:layout_height="wrap_content"
+        android:layout_width="219dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -22,7 +22,7 @@
 
     <Button
         android:id="@+id/searchButton"
-        android:layout_width="match_parent"
+        android:layout_width="163dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -83,5 +83,16 @@
         android:layout_marginTop="86dp"
         android:layout_marginEnd="13dp"
         android:text="Pronunciation" />
+
+    <Button
+        android:id="@+id/bookmarkBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/searchButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="41dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginBottom="1dp"
+        android:text="Bookmark" />
 
 </RelativeLayout>
