--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="8dp"
+        android:text="Recycler View"/>
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/searchWordTextInput"
         android:layout_width="219dp"
