--- a/app/src/main/res/layout/activity_bookmark.xml
+++ b/app/src/main/res/layout/activity_bookmark.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.coding.informer.dictionary_app_v3.MainActivity">
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="8dp"
+        android:text="Recycler View"/>
     <TextView
         android:id="@+id/bookmarkedWordsList"
         android:layout_width="266dp"
