--- a/app/src/main/res/layout/activity_bookmark.xml
+++ b/app/src/main/res/layout/activity_bookmark.xml
@@ -8,34 +8,27 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="412dp"
+        android:layout_height="545dp"
+        android:layout_marginTop="20dp"
         android:paddingBottom="8dp"
-        android:text="Recycler View"/>
-    <TextView
-        android:id="@+id/bookmarkedWordsList"
-        android:layout_width="266dp"
-        android:layout_height="187dp"
-        android:layout_alignParentEnd="true"
-        android:text="Empty"
+        android:text="Recycler View"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.268"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.281" />
+        app:layout_constraintTop_toBottomOf="@+id/bookmarkedWordsTitle" />
 
     <TextView
         android:id="@+id/bookmarkedWordsTitle"
         android:layout_width="259dp"
         android:layout_height="33dp"
+        android:layout_marginTop="108dp"
         android:text="Bookmarked Words"
-        app:layout_constraintBottom_toTopOf="@+id/bookmarkedWordsList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.256"
+        app:layout_constraintHorizontal_bias="0.105"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.722" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/mainPageBtn"
@@ -44,8 +37,8 @@
         android:text="Back To Main Page"
         app:layout_constraintBottom_toTopOf="@+id/bookmarkedWordsTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.072"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.651" />
+        app:layout_constraintVertical_bias="0.243" />
 </androidx.constraintlayout.widget.ConstraintLayout>
