--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -13,20 +13,14 @@
         android:layout_marginTop="10dp"
         android:text="New Text"
         android:textSize="18sp"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/awardYear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/wordText"
-        android:layout_alignStart="@+id/wordText"
-        android:layout_marginTop="20dp"
-        android:text="New Text"
-        android:textColor="#000" />
+        android:textStyle="bold"
+        android:textColor="#000000" />
+
     <TextView
         android:id="@+id/wordAddedDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:text="New Text" />
+        android:text="New Text"
+        android:textColor="#000000" />
 </RelativeLayout>
