--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/searchWordTextInput"
-        android:layout_width="219dp"
-        android:layout_height="60dp"
+        android:layout_width="378dp"
+        android:layout_height="61dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -20,37 +20,16 @@
         android:layout_marginTop="367dp"
         android:hint="Enter word to search" />
 
+
     <Button
         android:id="@+id/searchButton"
-        android:layout_width="163dp"
+        android:layout_width="339dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="433dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="441dp"
         android:text="Search Word" />
-
-    <Button
-        android:id="@+id/pronunciationBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="380dp"
-        android:layout_marginEnd="11dp"
-        android:text="Pronunciation" />
-
-
-    <Button
-        android:id="@+id/bookmarkBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/searchButton"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="-1dp"
-        android:text="Bookmark" />
 
     <Button
         android:id="@+id/bookmarksPageBtn"
@@ -78,7 +57,9 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="126dp"
         android:layout_marginBottom="669dp"
-        android:text="Dictionary App" />
+        android:text="Dictionary App"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/historyPageBtn"
