--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -21,8 +21,8 @@
 
     <Button
         android:id="@+id/shareOnFacebookBtn"
-        android:layout_width="119dp"
-        android:layout_height="47dp"
+        android:layout_width="132dp"
+        android:layout_height="51dp"
 
 
         android:layout_marginStart="91dp"
@@ -56,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="374dp"
                 android:text="Definition Description" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -69,8 +70,21 @@
         android:textColor="#FF0000"
         android:textSize="12sp"
         android:textStyle="bold"
-        android:translationX="90dp"
+        android:translationX="30dp"
         android:translationY="-250dp" />
+
+    <Button
+        android:id="@+id/bookmarkBtn"
+        android:layout_width="124dp"
+        android:layout_height="50dp"
+        android:scaleX="1"
+        android:scaleY="1"
+        android:text="Bookmark"
+        android:textColor="#FF0000"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:translationX="170dp"
+        android:translationY="-300dp" />
 
     <TextView
         android:id="@+id/definitionWord"
@@ -87,7 +101,13 @@
         android:text="Definition Word"
         android:textSize="34sp"
         android:textStyle="bold"
-        android:translationY="-650dp" />
+        android:translationY="-680dp" />
+
+    <TextView
+        android:id="@+id/toastMessage"
+        android:layout_width="match_parent"
+        android:layout_height="29dp"
+        android:translationY="-850dp" />
 
 
 </LinearLayout>
